@@ -151,20 +151,34 @@
     <email>nab@mail.by</email>
   </person>
   <!-- bn translation coordinator -->
-  <person id="taneem">
-    <!-- FIXME: is Runa Bhattacharjee<runa@bengalinux.org> "runab" or Taneem person? -->
-    <name>Taneem Ahmed</name>
-    <email>taneem@eyetap.org</email>
+  <person id="x-jamilahmed">
+    <name>Jamil Ahmed</name>
+    <email>itsjamil@gmail.com</email>
+  </person>
+  <!-- bn_IN translation coordinator -->
+  <person id="x-sayamindudasgupta">
+    <name>Sayamindu Dasgupta</name>
+    <email>sayamindu@gmail.com</email>
   </person>
   <!-- bs translation coordinator -->
   <person id="aakagic">
     <name>Amila Akagić</name>
     <email>bono@lugbih.org</email>
   </person>
-  <!-- pt_BR translation coordinator -->
+  <!-- former pt_BR translation coordinator -->
   <person id="gdvieira">
     <name>Gustavo Maciel Dias Vieira</name>
     <email>gustavo@sagui.org</email>
+  </person>
+  <!-- former pt_BR translation coordinator -->
+  <person id="gdvieira">
+    <name>Gustavo Maciel Dias Vieira</name>
+    <email>gustavo@sagui.org</email>
+  </person>
+  <!-- pt_BR translation coordinator -->
+  <person id="gpastore">
+    <name>Guilherme de S. Pastore</name>
+    <email>gpastore@gnome.org</email>
   </person>
   <!-- br translation coordinator -->
   <person id="x-jeremyarfloch">
@@ -177,9 +191,9 @@
     <email>ash@contact.bg</email>
   </person>
   <!-- my translation coordinator -->
-  <person id="zawwinaung">
-    <name>Zaw Win Aung</name>
-    <email>zwassdt@yahoo.com</email>
+  <person id="x-linhtun">
+    <name>Lin Htun</name>
+    <email>coordinator@gnome.myanmarlinux.org</email>
   </person>
   <!-- en_GB translation coordinator -->
   <person id="hadess">
@@ -208,20 +222,25 @@
     <email>abelcheung@gmail.com</email>
   </person>
   <!-- hr translation coordinator -->
-  <person id="x-robertsedak">
+  <person id="rsedak">
     <name>Robert Sedak</name>
     <email>robert.sedak@sk.htnet.hr</email>
   </person>
   <!-- cs translation coordinator -->
-  <person id="x-stanislavbrabec">
+  <person id="jfriedl">
     <!-- FIXME: isn't "mitr" the person? -->
-    <name>Stanislav Brabec</name>
-    <email>utx@penguin.cz</email>
+    <name>Jakub Friedl</name>
+    <email>jfriedl@suse.cz</email>
   </person>
   <!-- da translation coordinator -->
-  <person id="x-martinwillemoeshansen">
+  <person id="mwh">
     <name>Martin Willemoes Hansen</name>
     <email>mwh@sysrq.dk</email>
+  </person>
+  <!-- dv translation coordinator -->
+  <person id="x-sofwathullahmohamed">
+    <name>Sofwathullah Mohamed</name>
+    <email>smohamed@wataniya-maldives.com</email>
   </person>
   <!-- nl translation coordinator -->
   <person id="adrighem">
@@ -234,9 +253,9 @@
     <email>pema_geyleg@rediffmail.com</email>
   </person>
   <!-- eo translation coordinator -->
-  <person id="x-artempopov">
-    <name>Artem Popov</name>
-    <email>tfwo@mail.ru</email>
+  <person id="x-guillaumesavaton">
+    <name>Guillaume Savaton</name>
+    <email>llumeao@gmail.com</email>
   </person>
   <!-- et translation coordinator -->
   <person id="plaes">
@@ -253,10 +272,15 @@
     <name>Ilkka Tuohela</name>
     <email>hile@iki.fi</email>
   </person>
-  <!-- fr translation coordinator -->
+  <!-- former fr translation coordinator -->
   <person id="redfox">
     <name>Christophe Merlet (RedFox)</name>
     <email>redfox@redfoxcenter.org</email>
+  </person>
+  <!-- fr translation coordinator -->
+  <person id="x-stephaneraimbault">
+    <name>Stéphane Raimbault</name>
+    <email>stephane.raimbault@gmail.com</email>
   </person>
   <!-- gl translation coordinator -->
   <person id="icq">
@@ -417,25 +441,39 @@
     <name>Kenneth Rohde Christiansen</name>
     <email>kenneth@gnu.org</email>
   </person>
-  <!-- lt translation coordinator -->
+  <!-- former lt translation coordinator -->
   <person id="zygis">
     <name>Žygimantas Beručka</name>
     <email>uid0@akl.lt</email>
+  </person>
+  <!-- lt translation coordinator -->
+  <person id="gintas">
+    <name>Gintautas Miliauskas</name>
+    <email>gintas@akl.lt</email>
   </person>
   <!-- nds translation coordinator -->
   <person id="x-jurgenluters">
     <name>Jürgen Lüters</name>
     <email>jlueters@intranet-engineering.de</email>
   </person>
-  <!-- mk translation coordinator -->
+  <!-- former mk translation coordinator -->
   <person id="arangela">
     <name>Arangel Angov</name>
     <email>ufo@linux.net.mk</email>
+  </person>
+  <!-- mk translation coordinator -->
+  <person id="jovanna">
+    <name>Jovan Naumovski</name>
+    <email>jovan@lugola.net</email>
   </person>
   <!-- mai translation coordinator -->
   <person id="x-rajeshranjan">
     <name>Rajesh Ranjan</name>
     <email>rajeshkajha@yahoo.com</email>
+  </person>
+  <person id="x-thierryrandrianiriana">
+    <name>Thierry Randrianiriana</name>
+    <email>randrianiriana@gmail.com</email>
   </person>
   <!-- ms translation coordinator -->
   <person id="sebol">
@@ -443,9 +481,9 @@
     <email>sebol@ikhlas.com</email>
   </person>
   <!-- ml translation coordinator -->
-  <person id="x-sajithvk">
-    <name>Sajith V.K</name>
-    <email>sajith_vk@linuxmail.org</email>
+  <person id="x-peterani">
+    <name>Peter Ani</name>
+    <email>peter.ani@gmail.com</email>
   </person>
   <!-- mt translation coordinator -->
   <person id="x-ramoncasha">
@@ -458,9 +496,9 @@
     <email>jbowtie@amathaine.com</email>
   </person>
   <!-- mr translation coordinator -->
-  <person id="x-jitendrashah">
-    <name>Jitendra Shah</name>
-    <email>jitendras@vsnl.com</email>
+  <person id="x-swapnilhajare">
+    <name>Swapnil Hajare</name>
+    <email>dreamil@gmail.com</email>
   </person>
   <!-- myn translation coordinator -->
   <person id="x-danielespinosa">
@@ -543,7 +581,7 @@
     <email>javier.chulve@gmail.com</email>
   </person>
   <!-- ro translation coordinator -->
-  <person id="mugurulu">
+  <person id="mugurelu">
     <name>Mugurel Tudor</name>
     <email>mugurelu@gnome.ro</email>
   </person>
@@ -649,10 +687,9 @@
     <email>gossner@arcom.com.au</email>
   </person>
   <!-- th translation coordinator -->
-  <person id="x-krichnasingkun">
-    <!-- FIXME: this guy has never committed anything, but "tkaroonb" seems pretty active -->
-    <name>Krich Nasingkun</name>
-    <email>nong_oos@hotmail.com</email>
+  <person id="tkaroonb">
+    <name>Theppitak Karoonboonyanan</name>
+    <email>theppitak@gmail.com</email>
   </person>
   <!-- bo translation coordinator -->
   <person id="x-christopherfynn">
@@ -690,9 +727,9 @@
     <email>mvd@mylinux.com.ua</email>
   </person>
   <!-- urd translation coordinator -->
-  <person id="x-shahzadchohan">
-    <name>Shahzad Chohan</name>
-    <email>shaz@linux.net.pk</email>
+  <person id="x-muhammadwaqasalam">
+    <name>Muhammad Waqas Alam</name>
+    <email>mwalam_uk@yahoo.co.uk</email>
   </person>
   <!-- uz translation coordinator -->
   <person id="x-mashrabkuvatov">
