@@ -62,7 +62,12 @@
   </team>
   <team id="bn">
     <_language id="bn">Bengali</_language>
-    <coordinator id="taneem"/>
+    <coordinator id="x-jamilahmed"/>
+    <webpage>http://www.bengalinux.org/projects/gnome/</webpage>
+  </team>
+  <team id="bn_IN">
+    <_language id="bn_IN">Bengali (India)</_language>
+    <coordinator id="x-sayamindudasgupta"/>
     <webpage>http://www.bengalinux.org/projects/gnome/</webpage>
   </team>
   <team id="bs">
@@ -87,7 +92,7 @@
   </team>
   <team id="my">
     <_language id="my">Burmese</_language>
-    <coordinator id="zawwinaung"/>
+    <coordinator id="x-linhtun"/>
   </team>
   <team id="en_GB">
     <_language id="en_GB">British English</_language>
@@ -119,17 +124,22 @@
   </team>
   <team id="hr">
     <_language id="hr">Croatian</_language>
-    <coordinator id="x-robertsedak"/>
+    <coordinator id="rsedak"/>
     <webpage>http://lokalizacija.linux.hr/</webpage>
   </team>
   <team id="cs">
     <_language id="cs">Czech</_language>
-    <coordinator id="x-stanislavbrabec"/>
+    <coordinator id="jfriedl"/>
   </team>
   <team id="da">
     <_language id="da">Danish</_language>
-    <coordinator id="x-martinwillemoeshansen"/>
+    <coordinator id="mwh"/>
     <webpage>http://www.dansk-gruppen.dk/index.php?ID=18&amp;lang=da</webpage>
+  </team>
+  <team id="dv">
+    <_language id="dv">Divehi</_language>
+    <coordinator id="x-sofwathullahmohamed"/>
+    <webpage>http://www.mlug.mv/</webpage>
   </team>
   <team id="nl">
     <_language id="nl">Dutch</_language>
@@ -143,7 +153,7 @@
   </team>
   <team id="eo">
     <_language id="eo">Esperanto</_language>
-    <coordinator id="x-artempopov"/>
+    <coordinator id="x-guillaumesavaton"/>
   </team>
   <team id="et">
     <_language id="et">Estonian</_language>
@@ -161,7 +171,7 @@
   </team>
   <team id="fr">
     <_language id="fr">French</_language>
-    <coordinator id="redfox"/>
+    <coordinator id="x-stephaneraimbault"/>
     <webpage>http://gnomefr.traduc.org/</webpage>
   </team>
   <team id="gl">
@@ -313,7 +323,7 @@
   </team>
   <team id="lt">
     <_language id="lt">Lithuanian</_language>
-    <coordinator id="zygis"/>
+    <coordinator id="gintas"/>
     <webpage>http://www.lietuvybe.org/gnome/</webpage>
   </team>
   <team id="nds">
@@ -323,12 +333,16 @@
   </team>
   <team id="mk">
     <_language id="mk">Macedonian</_language>
-    <coordinator id="arangela"/>
+    <coordinator id="jovanna"/>
     <webpage>http://gnome.softver.org.mk/</webpage>
   </team>
   <team id="mai">
     <_language id="mai">Maithili</_language>
     <coordinator id="x-rajeshranjan"/>
+  </team>
+  <team id="mg">
+    <_language id="mg">Malagasy</_language>
+    <coordinator id="x-thierryrandrianiriana"/>
   </team>
   <team id="ms">
     <_language id="ms">Malay</_language>
@@ -337,7 +351,7 @@
   </team>
   <team id="ml">
     <_language id="ml">Malayalam</_language>
-    <coordinator id="x-sajithvk"/>
+    <coordinator id="x-peterani"/>
     <webpage>http://www.keralaindustry.org/malayalam/</webpage>
   </team>
   <team id="mt">
@@ -352,7 +366,7 @@
   </team>
   <team id="mr">
     <_language id="mr">Marathi</_language>
-    <coordinator id="x-jitendrashah"/>
+    <coordinator id="x-swapnilhajare"/>
     <webpage>http://www.indictrans.org/</webpage>
   </team>
   <team id="myn">
@@ -431,7 +445,7 @@
   </team>
   <team id="ro">
     <_language id="ro">Romanian</_language>
-    <coordinator id="mugurulu"/>
+    <coordinator id="mugurelu"/>
     <webpage>http://gnomero.sourceforge.net/</webpage>
   </team>
   <team id="ru">
@@ -524,7 +538,7 @@
   </team>
   <team id="th">
     <_language id="th">Thai</_language>
-    <coordinator id="x-krichnasingkun"/>
+    <coordinator id="tkaroonb"/>
     <webpage>http://gnome-th.sourceforge.net/</webpage>
   </team>
   <team id="bo">
@@ -563,7 +577,8 @@
   </team>
   <team id="urd">
     <_language id="urd">Urdu</_language>
-    <coordinator id="x-shahzadchohan"/>
+    <coordinator id="x-muhammadwaqasalam"/>
+    <webpage>http://www.urduweb.org/</webpage>
   </team>
   <team id="uz">
     <_language id="uz">Uzbek</_language>
