@@ -1,5 +1,11 @@
 2007-01-02  Danilo Šegan  <danilo@gnome.org>
 
+	* people.xml.in:
+	* translation-teams.xml.in:
+	Updated.
+
+2007-01-02  Danilo Šegan  <danilo@gnome.org>
+
 	* translation-teams.xml.in: Update zh_HK team to list both zh_HK
 	and zh_TW.
 
